force-app/main/default/objects/LVPostion__c/LVPostion__c.object-meta.xml
<CustomObject>
    <label>LV Position</label>
    <nameField>
        <displayFormat>LVPos-{YY}-{0}</displayFormat> 
        <startingNumber>1</startingNumber>
        <label>LVPosition</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LV Position</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>