force-app/main/default/objects/LVPostion__c/fields/AlMax__c.field-meta.xml
<CustomField>
    <fullName>AlMax__c</fullName>
    <label>Al max</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>