force-app/main/default/objects/LVPostion__c/fields/AlMin__c.field-meta.xml
<CustomField>
    <fullName>AlMin__c</fullName>
    <label>Al min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>