force-app/main/default/objects/LVPostion__c/fields/BundleWeightCa__c.field-meta.xml
<CustomField>
    <fullName>BundleWeightCa__c</fullName>
    <label>Bundle Weight ca.</label> 
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>