force-app/main/default/objects/LVPostion__c/fields/BundleWeightMax__c.field-meta.xml
<CustomField>
    <fullName>BundleWeightMax__c</fullName>
    <label>Bundle Weight max</label> 
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>