force-app/main/default/objects/LVPostion__c/fields/CheckTreatment__c.field-meta.xml
<CustomField>
    <fullName>CheckTreatment__c</fullName>
    <label>Check/Treatment (St.11-14)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>F</fullName>
                <isActive>false</isActive>
                <label>F</label>
            </value>
            <value>
                <fullName>MA</fullName>
                <isActive>false</isActive>
                <label>MA</label>
            </value>
            <value>
                <fullName>T</fullName>
                <isActive>false</isActive>
                <label>T</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>