force-app/main/default/objects/LVPostion__c/fields/CrMax__c.field-meta.xml
<CustomField>
    <fullName>CrMax__c</fullName>
    <label>Cr max</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>