force-app/main/default/objects/LVPostion__c/fields/CrMin__c.field-meta.xml
<CustomField>
    <fullName>CrMin__c</fullName>
    <label>Cr min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>