force-app/main/default/objects/LVPostion__c/fields/CRule__c.field-meta.xml
<CustomField>
    <fullName>CRule__c</fullName>
    <label>C- Rule (St.7+8)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>C5</fullName>
            </value>
            <value>
                <fullName>C6</fullName>
            </value>
            <value>
                <fullName>C7</fullName>
            </value>
            <value>
                <fullName>C8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>