force-app/main/default/objects/LVPostion__c/fields/CuMax__c.field-meta.xml
<CustomField>
    <fullName>CuMax__c</fullName>
    <label>Cu max</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>