force-app/main/default/objects/LVPostion__c/fields/CuMin__c.field-meta.xml
<CustomField>
    <fullName>CuMin__c</fullName>
    <label>Cu min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>