force-app/main/default/objects/LVPostion__c/fields/CustomerSteelGrade__c.field-meta.xml
<CustomField>
    <fullName>CustomerSteelGrade__c</fullName>
    <label>Customer Steel Grade</label>
    <length>23</length>
    <type>Text</type>
</CustomField>