force-app/main/default/objects/LVPostion__c/fields/Degassing__c.field-meta.xml
<CustomField>
    <fullName>Degassing__c</fullName>
    <label>Degassing (St.6)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>