force-app/main/default/objects/LVPostion__c/fields/DeliveryInstruction__c.field-meta.xml
<CustomField>
    <fullName>DeliveryInstruction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Instruction</label>
    <referenceTo>DeliveryInstructions__c</referenceTo>
    <relationshipLabel>LV Position</relationshipLabel>
    <relationshipName>LV_Position</relationshipName>
    <type>Lookup</type>
</CustomField>