force-app/main/default/objects/LVPostion__c/fields/DimensionATo__c.field-meta.xml
<CustomField>
    <fullName>DimensionATo__c</fullName>
    <label>Dimension A to in mm</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>