force-app/main/default/objects/LVPostion__c/fields/DimensionB__c.field-meta.xml
<CustomField>
    <fullName>DimensionB__c</fullName>
    <label>Dimension B in mm</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>