force-app/main/default/objects/LVPostion__c/fields/DimensionBUnit__c.field-meta.xml
<CustomField>
    <fullName>DimensionBUnit__c</fullName>
    <label>Dimension B</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>