force-app/main/default/objects/LVPostion__c/fields/EndProcessing__c.field-meta.xml
<CustomField>
    <fullName>EndProcessing__c</fullName>
    <label>End Processing (St.36)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
                <isActive>false</isActive>
                <label>Z</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>