force-app/main/default/objects/LVPostion__c/fields/EndProcessingSides__c.field-meta.xml
<CustomField>
    <fullName>EndProcessingSides__c</fullName>
    <label>End Processing Sides (St.37)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>