force-app/main/default/objects/LVPostion__c/fields/HeatTreatment__c.field-meta.xml
<CustomField>
    <fullName>HeatTreatment__c</fullName>
    <label>Heat Treatment (St.29+30)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AE</fullName>
                <isActive>false</isActive>
                <label>AE</label>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>AN</fullName>
                <isActive>false</isActive>
                <label>AN</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <isActive>false</isActive>
                <label>AR</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <isActive>false</isActive>
                <label>AT</label>
            </value>
            <value>
                <fullName>DR</fullName>
                <isActive>false</isActive>
                <label>DR</label>
            </value>
            <value>
                <fullName>EA</fullName>
                <isActive>false</isActive>
                <label>EA</label>
            </value>
            <value>
                <fullName>EF</fullName>
            </value>
            <value>
                <fullName>ET</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
                <isActive>false</isActive>
                <label>GE</label>
            </value>
            <value>
                <fullName>GG</fullName>
                <isActive>false</isActive>
                <label>GG</label>
            </value>
            <value>
                <fullName>GL</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>GR</fullName>
                <isActive>false</isActive>
                <label>GR</label>
            </value>
            <value>
                <fullName>GZ</fullName>
            </value>
            <value>
                <fullName>HG</fullName>
                <isActive>false</isActive>
                <label>HG</label>
            </value>
            <value>
                <fullName>HL</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
                <isActive>false</isActive>
                <label>HR</label>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>IE</fullName>
            </value>
            <value>
                <fullName>IH</fullName>
            </value>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>IZ</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
            <value>
                <fullName>LR</fullName>
                <isActive>false</isActive>
                <label>LR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>