force-app/main/default/objects/LVPostion__c/fields/Homogenize__c.field-meta.xml
<CustomField>
    <fullName>Homogenize__c</fullName>
    <label>Homogenize (St.27)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>