force-app/main/default/objects/LVPostion__c/fields/HZVAnnealing__c.field-meta.xml
<CustomField>
    <fullName>HZVAnnealing__c</fullName>
    <label>HZV - Annealing (St.26)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>