force-app/main/default/objects/LVPostion__c/fields/HZVCheckTreatment__c.field-meta.xml
<CustomField>
    <fullName>HZVCheckTreatment__c</fullName>
    <label>HZV - Check/Treatment (St.22-25)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
                <isActive>false</isActive>
                <label>AM</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <isActive>false</isActive>
                <label>AT</label>
            </value>
            <value>
                <fullName>AV</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
                <isActive>false</isActive>
                <label>EM</label>
            </value>
            <value>
                <fullName>EV</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>FA</fullName>
            </value>
            <value>
                <fullName>FK</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>FZ</fullName>
                <isActive>false</isActive>
                <label>FZ</label>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
            <value>
                <fullName>KF</fullName>
                <isActive>false</isActive>
                <label>KF</label>
            </value>
            <value>
                <fullName>KM</fullName>
                <isActive>false</isActive>
                <label>KM</label>
            </value>
            <value>
                <fullName>KTM</fullName>
                <isActive>false</isActive>
                <label>KTM</label>
            </value>
            <value>
                <fullName>KV</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MAM</fullName>
                <isActive>false</isActive>
                <label>MAM</label>
            </value>
            <value>
                <fullName>MAV</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>MEM</fullName>
                <isActive>false</isActive>
                <label>MEM</label>
            </value>
            <value>
                <fullName>MEV</fullName>
            </value>
            <value>
                <fullName>MK</fullName>
            </value>
            <value>
                <fullName>MKM</fullName>
                <isActive>false</isActive>
                <label>MKM</label>
            </value>
            <value>
                <fullName>MKV</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>MTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>