force-app/main/default/objects/LVPostion__c/fields/HZVSampletest__c.field-meta.xml
<CustomField>
    <fullName>HZVSampletest__c</fullName>
    <label>HZV - Sample test (St.19)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>