force-app/main/default/objects/LVPostion__c/fields/InternalDefectcheck__c.field-meta.xml
<CustomField>
    <fullName>InternalDefectcheck__c</fullName>  
    <label>Internal Defect Check</label> 
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy 1</fullName>
            </value>
            <value>
                <fullName>Dummy 2</fullName>
            </value>
            <value>
                <fullName>Dummy 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>