force-app/main/default/objects/LVPostion__c/fields/InternalDefectTest__c.field-meta.xml
<CustomField>
    <fullName>InternalDefectTest__c</fullName>
    <label>Internal Defect Test</label> 
    <length>50</length>
    <type>Text</type>
</CustomField>