force-app/main/default/objects/LVPostion__c/fields/InternalSteelGrade__c.field-meta.xml
<CustomField>
    <fullName>InternalSteelGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Steel Grade</label>
    <referenceTo>SteelGrade__c</referenceTo>
    <relationshipLabel>LV Position</relationshipLabel>
    <relationshipName>LV_Position</relationshipName>
    <type>Lookup</type>
</CustomField>