force-app/main/default/objects/LVPostion__c/fields/J10Max__c.field-meta.xml
<CustomField>
    <fullName>J10Max__c</fullName>
    <label>J10 max.</label>
    <precision>15</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>