force-app/main/default/objects/LVPostion__c/fields/J10Min__c.field-meta.xml
<CustomField>
    <fullName>J10Min__c</fullName>
    <label>J10 min</label>
    <precision>15</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>