force-app/main/default/objects/LVPostion__c/fields/J13Max__c.field-meta.xml
<CustomField>
    <fullName>J13Max__c</fullName>
    <label>J13 max.</label>
    <precision>15</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>