force-app/main/default/objects/LVPostion__c/fields/J13Min__c.field-meta.xml
<CustomField>
    <fullName>J13Min__c</fullName>
    <label>J13 min</label>
    <precision>15</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>