force-app/main/default/objects/LVPostion__c/fields/J1_5Max__c.field-meta.xml
<CustomField>
    <fullName>J1_5Max__c</fullName>
    <label>J1,5 max.</label>
    <precision>15</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>