force-app/main/default/objects/LVPostion__c/fields/J1_5Min__c.field-meta.xml
<CustomField>
    <fullName>J1_5Min__c</fullName>
    <label>J1,5 min.</label>
    <precision>15</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>