force-app/main/default/objects/LVPostion__c/fields/LengthFrom__c.field-meta.xml
<CustomField>
    <fullName>LengthFrom__c</fullName>
    <label>Length From</label> 
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>