force-app/main/default/objects/LVPostion__c/fields/MnMax__c.field-meta.xml
<CustomField>
    <fullName>MnMax__c</fullName>
    <label>Mn max</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>