force-app/main/default/objects/LVPostion__c/fields/MnMin__c.field-meta.xml
<CustomField>
    <fullName>MnMin__c</fullName>
    <label>Mn min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>