force-app/main/default/objects/LVPostion__c/fields/MoMax__c.field-meta.xml
<CustomField>
    <fullName>MoMax__c</fullName>
    <label>Mo max</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>