force-app/main/default/objects/LVPostion__c/fields/MoMin__c.field-meta.xml
<CustomField>
    <fullName>MoMin__c</fullName>
    <label>Mo min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>