force-app/main/default/objects/LVPostion__c/fields/MultipleStraightening__c.field-meta.xml
<CustomField>
    <fullName>MultipleStraightening__c</fullName>
    <label>Multiple Straightening (St.32)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>