force-app/main/default/objects/LVPostion__c/fields/NbMax__c.field-meta.xml
<CustomField>
    <fullName>NbMax__c</fullName>
    <label>Nb max</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>