force-app/main/default/objects/LVPostion__c/fields/NbMin__c.field-meta.xml
<CustomField>
    <fullName>NbMin__c</fullName>
    <label>Nb min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>