force-app/main/default/objects/LVPostion__c/fields/NiMax__c.field-meta.xml
<CustomField>
    <fullName>NiMax__c</fullName>
    <label>Ni max</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>