force-app/main/default/objects/LVPostion__c/fields/NiMin__c.field-meta.xml
<CustomField>
    <fullName>NiMin__c</fullName>
    <label>Ni min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>