force-app/main/default/objects/LVPostion__c/fields/Nmin__c.field-meta.xml
<CustomField>
    <fullName>Nmin__c</fullName>
    <label>N min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>