force-app/main/default/objects/LVPostion__c/fields/PbMax__c.field-meta.xml
<CustomField>
    <fullName>PbMax__c</fullName>
    <label>Pb max</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>