force-app/main/default/objects/LVPostion__c/fields/PbMin__c.field-meta.xml
<CustomField>
    <fullName>PbMin__c</fullName>
    <label>Pb min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>