force-app/main/default/objects/LVPostion__c/fields/Peelingbarwirerod__c.field-meta.xml
<CustomField>
    <fullName>Peelingbarwirerod__c</fullName>
    <label>Peeling bar/ wire rod (St.33)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
                <isActive>false</isActive>
                <label>Z</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>