force-app/main/default/objects/LVPostion__c/fields/Pmax__c.field-meta.xml
<CustomField>
    <fullName>Pmax__c</fullName>
    <label>P max</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>