force-app/main/default/objects/LVPostion__c/fields/Pmin__c.field-meta.xml
<CustomField>
    <fullName>Pmin__c</fullName>
    <label>P min</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>