force-app/main/default/objects/LVPostion__c/fields/Praekula__c.field-meta.xml
<CustomField>
    <fullName>Praekula__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Präkula</label>
    <referenceTo>Praekula__c</referenceTo>
    <relationshipLabel>LV Position</relationshipLabel>
    <relationshipName>LVPosition</relationshipName>
    <type>Lookup</type>
</CustomField>