force-app/main/default/objects/LVPostion__c/fields/PriceRelevantTesting__c.field-meta.xml
<CustomField>
    <fullName>PriceRelevantTesting__c</fullName>
    <label>Price Relevant Testing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>