force-app/main/default/objects/LVPostion__c/fields/PrimRollingHomogenize__c.field-meta.xml
<CustomField>
    <fullName>PrimRollingHomogenize__c</fullName>
    <label>Prim. Rolling - Homogenize (St.15)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>