force-app/main/default/objects/LVPostion__c/fields/PrimRollingInputformat__c.field-meta.xml
<CustomField>
    <fullName>PrimRollingInputformat__c</fullName>
    <label>Prim. Rolling - Input format (St.16-18)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>125</fullName>
                <isActive>false</isActive>
                <label>125</label>
            </value>
            <value>
                <fullName>146</fullName>
            </value>
            <value>
                <fullName>150</fullName>
            </value>
            <value>
                <fullName>160</fullName>
            </value>
            <value>
                <fullName>180</fullName>
            </value>
            <value>
                <fullName>240</fullName>
                <isActive>false</isActive>
                <label>240</label>
            </value>
            <value>
                <fullName>999</fullName>
                <isActive>false</isActive>
                <label>999</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>